<resources>
    <string name="app_name">Ustadz Somad Streaming</string>
    <string name="player_error">Error initializing YouTube player: %s</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="home">Home</string>
    <string name="newest">Newest</string>
    <string name="live_now">Live Now</string>
    <string name="popular">Popular</string>
    <string name="more_ustadz">More Ustadz</string>
    <string name="editor_choice">Editor Choice</string>
    <string name="search">Search</string>

    <!-- AdMob ad unit IDs -->

    <string name="app_id">ca-app-pub-0333447002362481~3431052781</string>

    <string name="admob_banner">ca-app-pub-0333447002362481/6910955188</string>
    <string name="admob_interstitial">ca-app-pub-0333447002362481/6527811803</string>


    <string name="video_thumbnail">Video thumbnail</string>
    <string name="live">LIVE</string>
    <string name="video_title">Video Title</string>
    <string name="menu">Menu</string>
    <string name="hh_mm_ss">HH:MM:SS</string>
    <string name="pagar"> | </string>
    <string name="_9999_views">-9999 views</string>
    <string name="alert_prefence_changed">Preference changed, please restart application!</string>

    <string name="facebook_app_id">531273377217445</string>
    <string name="fb_login_protocol_scheme">fb531273377217445</string>
    <string name="beta_version">Beta Version</string>
    <string name="more_info_1"> Aplikasi ini sedang dalam pengembangan.</string>
    <string name="more_info_2">Jika ditemukan bug, error atau program crash, mohon dilaporkan kepada Kami.</string>

</resources>
