<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp"
    android:background="@color/colorRow"
    android:orientation="horizontal"
    app:cardCornerRadius="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/colorRow"
        android:baselineAligned="false"
        android:orientation="horizontal">
        >


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="15">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@color/colorBackground"
                android:contentDescription="@string/video_thumbnail"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/no_image" />

            <TextView
                android:id="@+id/duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_margin="3dp"
                android:background="@drawable/border_duration"
                android:text="@string/hh_mm_ss"
                android:textColor="@android:color/background_light"
                android:textSize="12sp" />

        </FrameLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_weight="10">

            <ImageButton
                android:id="@+id/btnMenu"
                android:layout_width="12dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="false"
                android:layout_alignParentTop="true"
                android:background="@null"
                android:contentDescription="@string/menu"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/ic_more_vert" />

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="false"
                android:layout_alignParentEnd="false"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="false"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/btnMenu"
                android:layout_toStartOf="@+id/btnMenu"
                android:text="@string/video_title"
                android:textColor="#333333"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/publishedAt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="false"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/title"
                android:text="yyyy-mm-dd HH:MM:SS"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/pagar1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title"
                android:layout_toRightOf="@+id/publishedAt"
                android:text=" | "
                android:textSize="12sp" />

            <TextView
                android:id="@+id/views"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title"
                android:layout_toEndOf="@+id/pagar1"
                android:layout_toRightOf="@+id/pagar1"
                android:text="@string/_9999_views"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/pagar2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/publishedAt"
                android:layout_toEndOf="@+id/video_id"
                android:layout_toRightOf="@+id/video_id"
                android:text=" | "
                android:textSize="12sp" />

            <TextView
                android:id="@+id/rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/publishedAt"
                android:layout_toEndOf="@+id/pagar2"
                android:layout_toRightOf="@+id/pagar2"
                android:paddingLeft="5dp"
                android:text="8.5"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/channel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="false"
                android:layout_alignParentLeft="false"
                android:layout_alignParentStart="false"
                android:layout_below="@+id/publishedAt"
                android:text="Video channel"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/slash1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/publishedAt"
                android:layout_toEndOf="@+id/channel"
                android:layout_toRightOf="@+id/channel"
                android:text=" / "
                android:textSize="12sp" />

            <TextView
                android:id="@+id/video_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="false"
                android:layout_alignParentLeft="false"
                android:layout_alignParentStart="false"
                android:layout_below="@+id/publishedAt"
                android:layout_marginLeft="5dp"
                android:layout_toEndOf="@+id/slash1"
                android:layout_toRightOf="@+id/slash1"
                android:text="video_id"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="false"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/channel"
                android:text="Description"
                android:textSize="12sp" />

        </RelativeLayout>


    </LinearLayout>
</android.support.v7.widget.CardView>